[project]
name = "amid"
dynamic = ["version", "dependencies"]
description = "A curated list of medical imaging datasets with unified interfaces"
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE" }
keywords = ["medical imaging", "dataset"]
authors = [
    { name = "NeuroML Group", email = "maxs987@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
"Homepage" = "https://github.com/neuro-ml/amid"
"Issues" = "https://github.com/neuro-ml/amid/issues"
"Source" = "https://github.com/neuro-ml/amid"
"Docs" = "https://neuro-ml.github.io/amid"

[project.scripts]
amid = "amid.internals.cli:main"
[project.entry-points.bev_plugin]
amid = "amid.internals.hooks"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["amid"]

[tool.setuptools.dynamic]
version = { attr = "amid.__version__.__version__" }
dependencies = { file = "requirements.txt" }

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.isort]
line_length = 120
lines_after_imports = 2
profile = 'black'
combine_as_imports = true

[tool.flake8]
# W503: line break before binary operator is actually considered best-practice
# E203: spaces around complex variables in slices are pep-right
# F401: unused imports in __init__.py-s
# I251: allow absolute imports in upper files
# B019: @lru_cache for static methods is fine
# B008: calling the function as default value is just part of the typer's interface
# C408: for identifier-like fields dict(x=y) is just more concise
ignore = ["W503", "E203", "B019", "B028", "C408"]
per-file-ignores = [
    "**/__init__.py:F401",
    "tests/*:I251",
    "docs/*:I251",
    "amid/internals/cli.py:B008",
]
max-line-length = 120
banned-modules = "amid.* = Use relative imports"
