[project]
name = "amid"
dynamic = ["version", "dependencies"]
description = "A curated list of medical imaging datasets with unified interfaces"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["medical imaging", "dataset"]
authors = [
    { name = "NeuroML Group", email = "max@ira-labs.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
"Homepage" = "https://github.com/neuro-ml/amid"
"Issues" = "https://github.com/neuro-ml/amid/issues"
"Source" = "https://github.com/neuro-ml/amid"
"Docs" = "https://neuro-ml.github.io/amid"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["amid"]

[tool.setuptools.dynamic]
version = { attr = "amid.__version__.__version__" }
dependencies = { file = "requirements.txt" }

[tool.pytest.ini_options]
markers = [
    "raw: tests that require the raw files storage",
]

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.isort]
line_length = 120
lines_after_imports = 2
profile = 'black'
combine_as_imports = true
